# OneHaven

./: .gitignore
onehaven/backend/: Dockerfile  README.md  docker-compose.yml  haven.db  openapi.json  pyproject.toml
onehaven/backend/OneHaven.egg-info/: PKG-INFO
onehaven/backend/app/: config.py  db.py  main.py  models.py  schemas.py
onehaven/backend/app/adapters/: rentcast_avm.py  sqlalchemy_repos.py
onehaven/backend/app/adapters/clients/: http_resilience.py  property_records.py  realcomp_reso.py  rentcast_avm.py  rentcast_listings.py  reso_web_api.py  wayne_auction.py
onehaven/backend/app/adapters/ingestion/: base.py  mls_grid.py  mls_reso.py  realcomp_direct.py  rentcast_listings.py  stub_json.py
onehaven/backend/app/adapters/ml_models/: __init__.py  conformal.py  local_fallback.py  quantile_local.py
onehaven/backend/app/adapters/repos/: leads.py  properties.py  sqlalchemy_repos.py
onehaven/backend/app/api/: connectors.py
onehaven/backend/app/connectors/: base.py  property_records.py  rentcast.py  reso_web_api.py  wayne.py  wayne_auction.py
onehaven/backend/app/connectors/ingestion/: base.py  mls_reso.py  rentcast_listings.py
onehaven/backend/app/domain/: address.py  deal_scoring.py  entity_resolution.py  features.py  motivation.py  parsing.py  policies.py  ranking.py  scoring.py  types.py
onehaven/backend/app/entrypoints/: fastapi_app.py
onehaven/backend/app/integrations/: base.py  webhook.py
onehaven/backend/app/jobs/: dispatch.py  refresh.py  scheduler.py
onehaven/backend/app/scoring/: deal.py  motivation.py  ranker.py
onehaven/backend/app/service_layer/: demo_seed.py  estimates.py  jobruns.py  scoring.py  unit_of_work.py
onehaven/backend/app/services/: demo_seed.py  ingest.py  jobruns.py  jobs.py  metrics.py  normalize.py  outbox.py  outcomes.py  rent_estimator.py
onehaven/backend/scripts/: init_db.py  migrate_add_arv_estimate.py  migrate_add_estimated_at.py  migrate_add_jobs_runs_summary_json.py  migrate_estimate_cache_timestamps.py  migrate_sqlite.py  run_scheduler.py  seed_demo.py  smoke_refresh_local.py  smoke_top_leads.py  test_rentcast_auth.py
onehaven/backend/tests/: conftest.py  test_domain_rental_gating.py  test_estimate_cache_roundtrip.py  test_integrations_disable.py  test_normalize.py  test_outbox_on_outcome.py  test_refresh_drop_samples.py  test_refresh_quality_gates.py  test_seed_idemponent.py  test_upsert_idempotent.py
(+15 files in other folders)
