[project]
name = "OneHaven"
version = "0.1.0"
description = "OneHaven - lead ingestion + scoring engine for real estate investing"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8.0"]

[tool.ruff]
line-length = 100
