[project]
name = "OneHaven"
version = "0.1.0"
description = "OneHaven - lead ingestion + scoring engine for real estate investing"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "apscheduler>=3.10",

  # --- Needed for a production-ish FastAPI + SQLAlchemy stack ---
  "greenlet>=3.0",          # SQLAlchemy async uses greenlet_spawn internally; avoids weird edge cases
  "typing-extensions>=4.10" # safer typing for 3.11+ (often pulled anyway, but keep explicit)
]

[project.optional-dependencies]
dev = [
  # Lint / format
  "ruff>=0.5",

  # Tests
  "pytest>=8.0",
  "pytest-asyncio==0.23.8",
  "pytest-cov>=5.0",            # coverage reports
  "anyio>=4.4",                 # makes async test runtime consistent across platforms
  "respx>=0.21.1",              # mock httpx calls in ingestion tests
  "pytest-dotenv>=0.5.2",       # automatically load .env in tests if you want

  # FastAPI testing client
  "asgi-lifespan>=2.1.0",       # helps test startup/shutdown events cleanly

  # Types (optional but extremely helpful)
  "mypy>=1.10",
  "types-python-dateutil>=2.9.0.20240316",
  "types-requests>=2.32.0.20240712"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = []
